[gd_scene load_steps=13 format=3 uid="uid://btc8hreb8gbl7"]

[ext_resource type="Script" uid="uid://d07pcg18uqpi" path="res://Scripts/blue.gd" id="1_45364"]
[ext_resource type="Texture2D" uid="uid://djkify63ix3vx" path="res://MainCharacter/Blue/BlueIdle1.png" id="2_frhon"]
[ext_resource type="Texture2D" uid="uid://chuygj7k3vjhd" path="res://MainCharacter/Blue/BlueIdle2.png" id="3_ux6vc"]
[ext_resource type="Texture2D" uid="uid://cia5oirmlpavw" path="res://MainCharacter/Blue/BlueJump.png" id="4_7usv3"]
[ext_resource type="Texture2D" uid="uid://krralgmgfjii" path="res://MainCharacter/Blue/BlueWalk1.png" id="5_kays5"]
[ext_resource type="Texture2D" uid="uid://c2vllm6yriade" path="res://MainCharacter/Blue/BlueWalk2.png" id="6_wptl4"]
[ext_resource type="Texture2D" uid="uid://dxp77wq60c2rr" path="res://Assets/Textures/CloudTexture.png" id="7_m4axd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_45364"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_frhon")
}, {
"duration": 1.0,
"texture": ExtResource("3_ux6vc")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7usv3")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kays5")
}, {
"duration": 1.0,
"texture": ExtResource("6_wptl4")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_45364"]
radius = 17.3333
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvbjh"]
size = Vector2(58, 88.5)

[sub_resource type="Curve" id="Curve_m2jh0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_3gc37"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Blue" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_45364")
double_jump = true

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(-1, 15)
limit_left = 0
limit_bottom = 705
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 3)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_45364")
animation = &"Jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_45364")

[node name="Collision" type="Area2D" parent="."]
position = Vector2(-4, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(3, 7)
shape = SubResource("RectangleShape2D_tvbjh")

[node name="ParticleTrails" type="CPUParticles2D" parent="."]
physics_interpolation_mode = 0
emitting = false
amount = 20
texture = ExtResource("7_m4axd")
lifetime = 0.4
speed_scale = 0.8
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 42)
emitting = false
amount = 20
texture = ExtResource("7_m4axd")
lifetime = 0.4
speed_scale = 0.8
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
